- Fixed issue with form field options in certain cases where an EntityValue
  was pushed onto the context (which should never be done)
- Fixed issue when a drop-down with dynamic-options depends on a field with
  a display or display-entity widget as the hidden input did not have the
  @id attribute needed to get the field's value

===========================================================================
Release 1.5.2 - 2 May 2015
===========================================================================

Moqui Framework 1.5.2 is a minor new feature and bug fix release.

The main improvement in this release is significantly better performance.
Overall performance is about 3x faster, with various lower level entity and
service operations around 10x faster. There are also various improvements
to stability, especially in production under a load. Some of these are from
better concurrency handling and other improvements in Moqui, others from
updates to libraries including a newer version of Bitronix TM.

The H2 database is now used by default instead of Derby. There is now a
CUPS server integration using Cups4J including services to print, and
services and screens for managing printers and print jobs.

There are fixes for running Moqui on Microsoft Windows, and for using the
OrientDB database through the Entity Facade. These were both supported in
the past but were broken in recent versions of Moqui Framework.

New Features:

- Added H2 1.4.187, configuration for H2 Database
  - set as default embedded database instead of Derby
  - in default setup can be accessed remotely on port 9092 using a URI like
    jdbc:h2:tcp://localhost:9092/MoquiDEFAULT
  - H2 console available by default (see web.xml) at /h2
- Updated Atomikos to 4.0.0M4, Bitronix to 3.0.0-SNAPSHOT (built from
  source in GitHub repo), FreeMarker to 2.3.22, Groovy to 2.4.3
- Updated OrientDB to 2.0.8, tested and fixed a few issues
- Updated Apache Commons Codec to 1.9, Apache Commons Logging to 1.2,